[project]
name = "learner-graph"
version = "0.1.0"
description = "Learner Graph Recommendations - Design the intelligence that makes AI a “smart-cool friend” — a mastery graph, progress road-maps, and streak-goal engine that boost weekly practice by +20 %."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.12.1",
    "fastapi==0.104.1",
    "pydantic-settings==2.1.0",
    "pydantic==2.5.0",
    "sqlalchemy==2.0.23",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scikit-learn==1.3.0",
    "redis==5.0.1",
    "python-json-logger==2.0.7",
    "httpx==0.25.2",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "ruff>=0.12.5",
    "isort>=6.0.1",
]
